--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -2,6 +2,7 @@
   "hero.title": "Escucha la Palabra de Dios",
   "hero.subtitle": "Selecciona el libro y capítulo que deseas oír. Los audios se descargan automáticamente para escuchar sin conexión.",
   "loading.checking": "Verificando elementos descargados...",
+  "loading.bible": "Cargando la Biblia en tu idioma",
 
   "legend.partial": "Descarga Parcial",
   "legend.full": "Descarga Completa",
