Adds option to download whole bible

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -1,51 +1,72 @@
 {
-  "hero.title": "Listen to the Word of God",
-  "hero.subtitle": "Select the book and chapter you want to hear. Audios are downloaded automatically for offline listening.",
-  "loading.checking": "Checking downloaded items...",
-  "loading.bible": "Loading the Bible in your language",
-
-  "legend.partial": "Partial Download",
-  "legend.full": "Full Download",
-
-  "menu.home": "Home",
-  "menu.plans": "Plans",
-  "menu.settings": "Settings",
-
-  "plans.title": "Reading Plans",
-  "plans.subtitle": "Choose a plan to read the Bible in an organized way",
-
-  "settings.title": "Settings",
-  "settings.voice": "Audio Voice",
-  "settings.speed": "Playback Speed",
-  "settings.download": "Manage Downloads",
-
-  "plans": {
+  "hero": {
+    "title": "Listen to the Word of God",
+    "subtitle": "Select the book and chapters you want to listen to. Audios are automatically downloaded for offline listening.",
+    "full_download": "Download the entire Bible",
+    "full_download_description": "This action requires about 1.3 GB",
+    "downloading_bible": "Downloading the Bible: {{downloaded}} of {{total}} chapters",
+    "current_chapter": "Current chapter",
+    "download_complete": "Bible download complete!",
+    "confirm_mobile_data": "You are not connected to Wi-Fi. Downloading the entire Bible uses about 1.3 GB of data. Do you want to continue anyway?"
+  },
+  "loading": {
+    "bible": "Loading the Bible in your language",
+    "checking": "Checking downloaded items..."
+  },
+  "legend": {
+    "partial": "Partial Download",
+    "full": "Full Download"
+  },
+  "menu": {
+    "home": "Home",
     "plans": "Plans",
-    "current.title": "Current Plan",
-    "by": "by",
-    "of": "of",
-    "days_remaining": "days remaining",
-    "day": "Day",
-    "table.day": "Day",
-    "table.readings": "Readings",
-    "table.actions": "Actions",
-    "play": "Play goal",
-    "mark_complete": "Mark as completed",
-    "reset": "Reset",
-    "no_active.title": "No active plan",
-    "no_active.subtitle": "Choose one of the available plans below to start your Bible reading with audio!",
-    "started.title": "Started Plans",
-    "available.title": "Available Plans",
-    "resume": "Resume",
-    "open": "Open",
-    "delete": "Delete",
-    "start": "Start Plan",
+    "settings": "Settings"
+  },
+  "plans": {
+    "title": "Reading Plans",
+    "subtitle": "Choose a plan to read the Bible in an organized way",
+    "current": {
+      "title": "Current Plan",
+      "by": "by",
+      "of": "of",
+      "days_remaining": "days remaining",
+      "day": "Day"
+    },
+    "table": {
+      "day": "Day",
+      "readings": "Readings",
+      "actions": "Actions"
+    },
+    "actions": {
+      "play": "Play goal",
+      "mark_complete": "Mark as completed",
+      "reset": "Reset"
+    },
+    "no_active": {
+      "title": "No active plan",
+      "subtitle": "Choose one of the available plans below to start your Bible reading with audio!"
+    },
+    "started": {
+      "title": "Started Plans"
+    },
+    "available": {
+      "title": "Available Plans"
+    },
+    "buttons": {
+      "resume": "Resume",
+      "open": "Open",
+      "delete": "Delete",
+      "start": "Start Plan"
+    },
     "days": "days"
   },
   "settings": {
     "title": "Settings",
     "subtitle": "Manage app storage and preferences",
-
+    "voice": "Audio Voice",
+    "speed": "Playback Speed",
+    "download": "Manage Downloads",
+    "coming_soon": "More options coming soon...",
     "storage": {
       "title": "Storage",
       "used_by_app": "Used by the app (audios + plans):",
@@ -59,8 +80,6 @@
       "clear_warning": "This will permanently delete all downloaded audios ({{size}} MB), but will not affect your reading plans.",
       "calculating": "Calculating storage usage..."
     },
-
-    "coming_soon": "More options coming soon...",
     "language": {
       "title": "Language",
       "current": "Current language",
@@ -68,8 +87,10 @@
       "reset_note": "This will show the language selection screen again on the next app start."
     }
   },
-  "DIALOG": {
-    "HOLD_CONFIRM_TITLE": "Are you sure?",
-    "HOLD_CONFIRM_MESSAGE": "To confirm, hold this button for 5 seconds"
+  "dialog": {
+    "hold_confirm": {
+      "title": "Are you sure?",
+      "message": "To confirm, hold this button for 5 seconds"
+    }
   }
 }
