--- a/public/assets/i18n/pt-br.json
+++ b/public/assets/i18n/pt-br.json
@@ -1,51 +1,72 @@
 {
-  "hero.title": "Ouça a Palavra de Deus",
-  "hero.subtitle": "Selecione o livro e capítulo que deseja ouvir. Áudios são baixados automaticamente para ouvir offline.",
-  "loading.checking": "Verificando itens baixados...",
-  "loading.bible": "Carregando a bíblia no seu idioma",
-
-  "legend.partial": "Download Parcial",
-  "legend.full": "Download Completo",
-
-  "menu.home": "Início",
-  "menu.plans": "Planos",
-  "menu.settings": "Configs",
-
-  "plans.title": "Planos de Leitura",
-  "plans.subtitle": "Escolha um plano para ler a Bíblia de forma organizada",
-
-  "settings.title": "Configurações",
-  "settings.voice": "Voz do áudio",
-  "settings.speed": "Velocidade de reprodução",
-  "settings.download": "Gerenciar downloads",
-
-  "plans": {
+  "hero": {
+    "title": "Ouça a Palavra de Deus",
+    "subtitle": "Selecione o livro e os capítulos que deseja ouvir. Áudios são baixados automaticamente para ouvir offline.",
+    "full_download": "Baixar toda a Bíblia",
+    "full_download_description": "Esta ação requer cerca de 1.3 GB",
+    "downloading_bible": "Baixando a Bíblia: {{downloaded}} de {{total}} capítulos",
+    "current_chapter": "Capítulo atual",
+    "download_complete": "Download da Bíblia completo!",
+    "confirm_mobile_data": "Você não está conectado ao Wi-Fi. O download da Bíblia inteira usa cerca de 1.3 GB de dados. Deseja continuar mesmo assim?"
+  },
+  "loading": {
+    "bible": "Carregando a bíblia no seu idioma",
+    "checking": "Verificando itens baixados..."
+  },
+  "legend": {
+    "partial": "Download Parcial",
+    "full": "Download Completo"
+  },
+  "menu": {
+    "home": "Início",
     "plans": "Planos",
-    "current.title": "Plano Atual",
-    "by": "por",
-    "of": "de",
-    "days_remaining": "dias restantes",
-    "day": "Dia",
-    "table.day": "Dia",
-    "table.readings": "Leituras",
-    "table.actions": "Ações",
-    "play": "Reproduzir meta",
-    "mark_complete": "Marcar como concluído",
-    "reset": "Redefinir",
-    "no_active.title": "Nenhum plano em andamento",
-    "no_active.subtitle": "Escolha um dos planos disponíveis abaixo para começar sua leitura da Bíblia com áudio!",
-    "started.title": "Planos Iniciados",
-    "available.title": "Planos Disponíveis",
-    "resume": "Retomar",
-    "open": "Abrir",
-    "delete": "Excluir",
-    "start": "Começar Plano",
+    "settings": "Configurações"
+  },
+  "plans": {
+    "title": "Planos de Leitura",
+    "subtitle": "Escolha um plano para ler a Bíblia de forma organizada",
+    "current": {
+      "title": "Plano Atual",
+      "by": "por",
+      "of": "de",
+      "days_remaining": "dias restantes",
+      "day": "Dia"
+    },
+    "table": {
+      "day": "Dia",
+      "readings": "Leituras",
+      "actions": "Ações"
+    },
+    "actions": {
+      "play": "Reproduzir meta",
+      "mark_complete": "Marcar como concluído",
+      "reset": "Redefinir"
+    },
+    "no_active": {
+      "title": "Nenhum plano em andamento",
+      "subtitle": "Escolha um dos planos disponíveis abaixo para começar sua leitura da Bíblia com áudio!"
+    },
+    "started": {
+      "title": "Planos Iniciados"
+    },
+    "available": {
+      "title": "Planos Disponíveis"
+    },
+    "buttons": {
+      "resume": "Retomar",
+      "open": "Abrir",
+      "delete": "Excluir",
+      "start": "Começar Plano"
+    },
     "days": "dias"
   },
   "settings": {
     "title": "Configurações",
     "subtitle": "Gerencie o armazenamento e preferências do app",
-
+    "voice": "Voz do áudio",
+    "speed": "Velocidade de reprodução",
+    "download": "Gerenciar downloads",
+    "coming_soon": "Mais opções em breve...",
     "storage": {
       "title": "Armazenamento",
       "used_by_app": "Usado pelo app (áudios + planos):",
@@ -59,8 +80,6 @@
       "clear_warning": "Isso removerá permanentemente todos os áudios baixados ({{size}} MB), mas não afeta seus planos de leitura.",
       "calculating": "Calculando uso de armazenamento..."
     },
-
-    "coming_soon": "Mais opções em breve...",
     "language": {
       "title": "Idioma",
       "current": "Idioma atual",
@@ -68,8 +87,10 @@
       "reset_note": "Isso abrirá novamente a tela de seleção de idioma na próxima inicialização do app."
     }
   },
-  "DIALOG": {
-    "HOLD_CONFIRM_TITLE": "Tem certeza?",
-    "HOLD_CONFIRM_MESSAGE": "Para confirmar, segure este botão por 5 segundos"
+  "dialog": {
+    "hold_confirm": {
+      "title": "Tem certeza?",
+      "message": "Para confirmar, segure este botão por 5 segundos"
+    }
   }
 }
