--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -23,6 +23,7 @@
     "settings": "Configuraciones"
   },
   "plans": {
+    "plans": "Planes",
     "title": "Planes de Lectura",
     "subtitle": "Elige un plan para leer la Biblia de forma organizada",
     "current": {
