--- a/public/assets/i18n/pt-br.json
+++ b/public/assets/i18n/pt-br.json
@@ -23,6 +23,7 @@
     "settings": "Configurações"
   },
   "plans": {
+    "plans": "Planos",
     "title": "Planos de Leitura",
     "subtitle": "Escolha um plano para ler a Bíblia de forma organizada",
     "current": {
